--- a/Resources/res/misc.plist
+++ b/Resources/res/misc.plist
@@ -15,7 +15,7 @@
                 <key>spriteSourceSize</key>
                 <string>{768,1024}</string>
                 <key>textureRect</key>
-                <string>{{1,1},{768,1024}}</string>
+                <string>{{1,441},{768,1024}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -30,7 +30,37 @@
                 <key>spriteSourceSize</key>
                 <string>{64,64}</string>
                 <key>textureRect</key>
-                <string>{{895,1023},{58,58}}</string>
+                <string>{{771,567},{58,58}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>buildings/keysmith.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{156,156}</string>
+                <key>spriteSourceSize</key>
+                <string>{156,156}</string>
+                <key>textureRect</key>
+                <string>{{839,521},{156,156}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>buildings/mine.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{156,156}</string>
+                <key>spriteSourceSize</key>
+                <string>{156,156}</string>
+                <key>textureRect</key>
+                <string>{{771,815},{156,156}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -45,7 +75,7 @@
                 <key>spriteSourceSize</key>
                 <string>{32,32}</string>
                 <key>textureRect</key>
-                <string>{{525,1091},{32,32}}</string>
+                <string>{{831,711},{32,32}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -60,7 +90,7 @@
                 <key>spriteSourceSize</key>
                 <string>{32,32}</string>
                 <key>textureRect</key>
-                <string>{{559,1091},{32,32}}</string>
+                <string>{{865,711},{32,32}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -75,7 +105,7 @@
                 <key>spriteSourceSize</key>
                 <string>{64,64}</string>
                 <key>textureRect</key>
-                <string>{{955,1023},{58,58}}</string>
+                <string>{{771,627},{58,58}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -90,9 +120,54 @@
                 <key>spriteSourceSize</key>
                 <string>{64,64}</string>
                 <key>textureRect</key>
-                <string>{{743,1037},{58,58}}</string>
+                <string>{{771,687},{58,58}}</string>
                 <key>textureRotated</key>
                 <false/>
+            </dict>
+            <key>goldProgressBar.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{158,22}</string>
+                <key>spriteSourceSize</key>
+                <string>{158,22}</string>
+                <key>textureRect</key>
+                <string>{{977,1},{158,22}}</string>
+                <key>textureRotated</key>
+                <true/>
+            </dict>
+            <key>goldProgressBarBk.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{168,30}</string>
+                <key>spriteSourceSize</key>
+                <string>{168,30}</string>
+                <key>textureRect</key>
+                <string>{{831,679},{168,30}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>key.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,-12}</string>
+                <key>spriteSize</key>
+                <string>{116,104}</string>
+                <key>spriteSourceSize</key>
+                <string>{128,128}</string>
+                <key>textureRect</key>
+                <string>{{895,1103},{116,104}}</string>
+                <key>textureRotated</key>
+                <true/>
             </dict>
             <key>marker0.png</key>
             <dict>
@@ -105,7 +180,7 @@
                 <key>spriteSourceSize</key>
                 <string>{32,32}</string>
                 <key>textureRect</key>
-                <string>{{593,1091},{32,32}}</string>
+                <string>{{899,711},{32,32}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -120,7 +195,142 @@
                 <key>spriteSourceSize</key>
                 <string>{128,128}</string>
                 <key>textureRect</key>
-                <string>{{895,1},{128,128}}</string>
+                <string>{{847,1},{128,128}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>nothing.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{1,-1}</string>
+                <key>spriteSize</key>
+                <string>{3,3}</string>
+                <key>spriteSourceSize</key>
+                <string>{1,1}</string>
+                <key>textureRect</key>
+                <string>{{995,231},{3,3}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>occAvailable.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{16,16}</string>
+                <key>spriteSourceSize</key>
+                <string>{32,32}</string>
+                <key>textureRect</key>
+                <string>{{977,231},{16,16}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>occupied.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,1}</string>
+                <key>spriteSize</key>
+                <string>{22,26}</string>
+                <key>spriteSourceSize</key>
+                <string>{32,32}</string>
+                <key>textureRect</key>
+                <string>{{977,161},{22,26}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>portraits/Alee.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{104,104}</string>
+                <key>spriteSourceSize</key>
+                <string>{104,104}</string>
+                <key>textureRect</key>
+                <string>{{895,1221},{104,104}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>portraits/Dilly.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{104,104}</string>
+                <key>spriteSourceSize</key>
+                <string>{104,104}</string>
+                <key>textureRect</key>
+                <string>{{895,1327},{104,104}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>portraits/Lefty.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{104,104}</string>
+                <key>spriteSourceSize</key>
+                <string>{104,104}</string>
+                <key>textureRect</key>
+                <string>{{895,1433},{104,104}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>portraits/Untitled-7.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{22,2}</string>
+                <key>spriteSize</key>
+                <string>{438,844}</string>
+                <key>spriteSourceSize</key>
+                <string>{512,1024}</string>
+                <key>textureRect</key>
+                <string>{{1,1},{438,844}}</string>
+                <key>textureRotated</key>
+                <true/>
+            </dict>
+            <key>portraits/Zom.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{104,104}</string>
+                <key>spriteSourceSize</key>
+                <string>{104,104}</string>
+                <key>textureRect</key>
+                <string>{{895,1539},{104,104}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>portraits/placeholder.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{98,98}</string>
+                <key>spriteSourceSize</key>
+                <string>{104,104}</string>
+                <key>textureRect</key>
+                <string>{{901,973},{98,98}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -135,7 +345,7 @@
                 <key>spriteSourceSize</key>
                 <string>{208,26}</string>
                 <key>textureRect</key>
-                <string>{{525,1063},{208,26}}</string>
+                <string>{{771,787},{208,26}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -146,11 +356,11 @@
                 <key>spriteOffset</key>
                 <string>{0,0}</string>
                 <key>spriteSize</key>
-                <string>{216,34}</string>
+                <string>{220,38}</string>
                 <key>spriteSourceSize</key>
-                <string>{216,34}</string>
+                <string>{220,38}</string>
                 <key>textureRect</key>
-                <string>{{525,1027},{216,34}}</string>
+                <string>{{771,747},{220,38}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -165,7 +375,7 @@
                 <key>spriteSourceSize</key>
                 <string>{552,136}</string>
                 <key>textureRect</key>
-                <string>{{1,1027},{522,106}}</string>
+                <string>{{125,1467},{522,106}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -180,9 +390,24 @@
                 <key>spriteSourceSize</key>
                 <string>{552,136}</string>
                 <key>textureRect</key>
-                <string>{{771,1},{538,122}}</string>
+                <string>{{771,1103},{538,122}}</string>
                 <key>textureRotated</key>
                 <true/>
+            </dict>
+            <key>rs.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{66,124}</string>
+                <key>spriteSourceSize</key>
+                <string>{128,128}</string>
+                <key>textureRect</key>
+                <string>{{771,441},{66,124}}</string>
+                <key>textureRotated</key>
+                <false/>
             </dict>
             <key>runes/commonRune.png</key>
             <dict>
@@ -195,7 +420,7 @@
                 <key>spriteSourceSize</key>
                 <string>{128,128}</string>
                 <key>textureRect</key>
-                <string>{{771,541},{122,122}}</string>
+                <string>{{1,1467},{122,122}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -210,7 +435,7 @@
                 <key>spriteSourceSize</key>
                 <string>{128,128}</string>
                 <key>textureRect</key>
-                <string>{{771,665},{122,122}}</string>
+                <string>{{1,1591},{122,122}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -225,7 +450,7 @@
                 <key>spriteSourceSize</key>
                 <string>{128,128}</string>
                 <key>textureRect</key>
-                <string>{{895,651},{122,122}}</string>
+                <string>{{125,1575},{122,122}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -240,7 +465,7 @@
                 <key>spriteSourceSize</key>
                 <string>{128,128}</string>
                 <key>textureRect</key>
-                <string>{{771,789},{122,122}}</string>
+                <string>{{249,1575},{122,122}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -255,7 +480,7 @@
                 <key>spriteSourceSize</key>
                 <string>{128,128}</string>
                 <key>textureRect</key>
-                <string>{{895,775},{122,122}}</string>
+                <string>{{373,1575},{122,122}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -270,7 +495,7 @@
                 <key>spriteSourceSize</key>
                 <string>{128,128}</string>
                 <key>textureRect</key>
-                <string>{{771,913},{122,122}}</string>
+                <string>{{497,1575},{122,122}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -285,7 +510,7 @@
                 <key>spriteSourceSize</key>
                 <string>{128,128}</string>
                 <key>textureRect</key>
-                <string>{{895,131},{128,128}}</string>
+                <string>{{847,131},{128,128}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -300,7 +525,7 @@
                 <key>spriteSourceSize</key>
                 <string>{128,128}</string>
                 <key>textureRect</key>
-                <string>{{895,899},{122,122}}</string>
+                <string>{{621,1575},{122,122}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -315,7 +540,7 @@
                 <key>spriteSourceSize</key>
                 <string>{128,128}</string>
                 <key>textureRect</key>
-                <string>{{895,261},{128,128}}</string>
+                <string>{{847,261},{128,128}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -330,7 +555,7 @@
                 <key>spriteSourceSize</key>
                 <string>{128,128}</string>
                 <key>textureRect</key>
-                <string>{{895,391},{128,128}}</string>
+                <string>{{847,391},{128,128}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -345,9 +570,9 @@
                 <key>spriteSourceSize</key>
                 <string>{40,20}</string>
                 <key>textureRect</key>
-                <string>{{661,1091},{40,20}}</string>
+                <string>{{977,189},{40,20}}</string>
                 <key>textureRotated</key>
-                <false/>
+                <true/>
             </dict>
             <key>typeHighlight.png</key>
             <dict>
@@ -360,7 +585,7 @@
                 <key>spriteSourceSize</key>
                 <string>{64,64}</string>
                 <key>textureRect</key>
-                <string>{{863,1083},{50,50}}</string>
+                <string>{{929,875},{50,50}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -375,7 +600,7 @@
                 <key>spriteSourceSize</key>
                 <string>{32,32}</string>
                 <key>textureRect</key>
-                <string>{{627,1091},{32,32}}</string>
+                <string>{{933,711},{32,32}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -390,7 +615,7 @@
                 <key>spriteSourceSize</key>
                 <string>{128,128}</string>
                 <key>textureRect</key>
-                <string>{{895,521},{128,128}}</string>
+                <string>{{771,973},{128,128}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -405,7 +630,7 @@
                 <key>spriteSourceSize</key>
                 <string>{64,64}</string>
                 <key>textureRect</key>
-                <string>{{803,1037},{58,58}}</string>
+                <string>{{929,815},{58,58}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -421,9 +646,9 @@
             <key>realTextureFileName</key>
             <string>misc.png</string>
             <key>size</key>
-            <string>{1024,1134}</string>
+            <string>{1000,1714}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:12eb0e4565b41683c106b27c25ed4bda:a92f40abfb73d0c2a8bef97bc227e46a:cab1e9b820256652e8f1a6751ae38988$</string>
+            <string>$TexturePacker:SmartUpdate:6ab1dae7d28f44af187e6332593bdd53:b000871cc494dd281d3cc30f0595ce5b:cab1e9b820256652e8f1a6751ae38988$</string>
             <key>textureFileName</key>
             <string>misc.png</string>
         </dict>
