--- a/Resources/res/misc.plist
+++ b/Resources/res/misc.plist
@@ -15,9 +15,9 @@
                 <key>spriteSourceSize</key>
                 <string>{768,1024}</string>
                 <key>textureRect</key>
-                <string>{{1,441},{768,1024}}</string>
+                <string>{{1,1},{768,1024}}</string>
                 <key>textureRotated</key>
-                <false/>
+                <true/>
             </dict>
             <key>airType.png</key>
             <dict>
@@ -30,7 +30,7 @@
                 <key>spriteSourceSize</key>
                 <string>{64,64}</string>
                 <key>textureRect</key>
-                <string>{{771,567},{58,58}}</string>
+                <string>{{1477,813},{58,58}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -45,7 +45,7 @@
                 <key>spriteSourceSize</key>
                 <string>{156,156}</string>
                 <key>textureRect</key>
-                <string>{{839,521},{156,156}}</string>
+                <string>{{1269,549},{156,156}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -60,7 +60,7 @@
                 <key>spriteSourceSize</key>
                 <string>{156,156}</string>
                 <key>textureRect</key>
-                <string>{{771,815},{156,156}}</string>
+                <string>{{1427,549},{156,156}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -75,7 +75,7 @@
                 <key>spriteSourceSize</key>
                 <string>{32,32}</string>
                 <key>textureRect</key>
-                <string>{{831,711},{32,32}}</string>
+                <string>{{1537,813},{32,32}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -90,7 +90,7 @@
                 <key>spriteSourceSize</key>
                 <string>{32,32}</string>
                 <key>textureRect</key>
-                <string>{{865,711},{32,32}}</string>
+                <string>{{1775,807},{32,32}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -105,7 +105,7 @@
                 <key>spriteSourceSize</key>
                 <string>{64,64}</string>
                 <key>textureRect</key>
-                <string>{{771,627},{58,58}}</string>
+                <string>{{1715,807},{58,58}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -120,7 +120,7 @@
                 <key>spriteSourceSize</key>
                 <string>{64,64}</string>
                 <key>textureRect</key>
-                <string>{{771,687},{58,58}}</string>
+                <string>{{1571,831},{58,58}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -135,7 +135,7 @@
                 <key>spriteSourceSize</key>
                 <string>{158,22}</string>
                 <key>textureRect</key>
-                <string>{{977,1},{158,22}}</string>
+                <string>{{1873,223},{158,22}}</string>
                 <key>textureRotated</key>
                 <true/>
             </dict>
@@ -150,7 +150,7 @@
                 <key>spriteSourceSize</key>
                 <string>{168,30}</string>
                 <key>textureRect</key>
-                <string>{{831,679},{168,30}}</string>
+                <string>{{1269,735},{168,30}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -165,9 +165,9 @@
                 <key>spriteSourceSize</key>
                 <string>{128,128}</string>
                 <key>textureRect</key>
-                <string>{{895,1103},{116,104}}</string>
+                <string>{{1551,441},{116,104}}</string>
                 <key>textureRotated</key>
-                <true/>
+                <false/>
             </dict>
             <key>marker0.png</key>
             <dict>
@@ -180,7 +180,7 @@
                 <key>spriteSourceSize</key>
                 <string>{32,32}</string>
                 <key>textureRect</key>
-                <string>{{899,711},{32,32}}</string>
+                <string>{{1913,1},{32,32}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -195,7 +195,7 @@
                 <key>spriteSourceSize</key>
                 <string>{128,128}</string>
                 <key>textureRect</key>
-                <string>{{847,1},{128,128}}</string>
+                <string>{{1669,441},{128,128}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -210,7 +210,7 @@
                 <key>spriteSourceSize</key>
                 <string>{1,1}</string>
                 <key>textureRect</key>
-                <string>{{995,231},{3,3}}</string>
+                <string>{{1921,783},{3,3}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -225,7 +225,7 @@
                 <key>spriteSourceSize</key>
                 <string>{32,32}</string>
                 <key>textureRect</key>
-                <string>{{977,231},{16,16}}</string>
+                <string>{{1439,735},{16,16}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -240,7 +240,7 @@
                 <key>spriteSourceSize</key>
                 <string>{32,32}</string>
                 <key>textureRect</key>
-                <string>{{977,161},{22,26}}</string>
+                <string>{{1821,701},{22,26}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -255,7 +255,7 @@
                 <key>spriteSourceSize</key>
                 <string>{104,104}</string>
                 <key>textureRect</key>
-                <string>{{895,1221},{104,104}}</string>
+                <string>{{1845,571},{104,104}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -270,7 +270,7 @@
                 <key>spriteSourceSize</key>
                 <string>{104,104}</string>
                 <key>textureRect</key>
-                <string>{{895,1327},{104,104}}</string>
+                <string>{{1845,677},{104,104}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -285,7 +285,7 @@
                 <key>spriteSourceSize</key>
                 <string>{104,104}</string>
                 <key>textureRect</key>
-                <string>{{895,1433},{104,104}}</string>
+                <string>{{1479,707},{104,104}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -300,7 +300,7 @@
                 <key>spriteSourceSize</key>
                 <string>{512,1024}</string>
                 <key>textureRect</key>
-                <string>{{1,1},{438,844}}</string>
+                <string>{{1027,1},{438,844}}</string>
                 <key>textureRotated</key>
                 <true/>
             </dict>
@@ -315,7 +315,7 @@
                 <key>spriteSourceSize</key>
                 <string>{104,104}</string>
                 <key>textureRect</key>
-                <string>{{895,1539},{104,104}}</string>
+                <string>{{1715,701},{104,104}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -330,7 +330,7 @@
                 <key>spriteSourceSize</key>
                 <string>{104,104}</string>
                 <key>textureRect</key>
-                <string>{{901,973},{98,98}}</string>
+                <string>{{1821,783},{98,98}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -345,7 +345,7 @@
                 <key>spriteSourceSize</key>
                 <string>{208,26}</string>
                 <key>textureRect</key>
-                <string>{{771,787},{208,26}}</string>
+                <string>{{1269,707},{208,26}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -360,9 +360,9 @@
                 <key>spriteSourceSize</key>
                 <string>{220,38}</string>
                 <key>textureRect</key>
-                <string>{{771,747},{220,38}}</string>
+                <string>{{1873,1},{220,38}}</string>
                 <key>textureRotated</key>
-                <false/>
+                <true/>
             </dict>
             <key>quiz/answer.png</key>
             <dict>
@@ -375,7 +375,7 @@
                 <key>spriteSourceSize</key>
                 <string>{552,136}</string>
                 <key>textureRect</key>
-                <string>{{125,1467},{522,106}}</string>
+                <string>{{1027,441},{522,106}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -390,9 +390,9 @@
                 <key>spriteSourceSize</key>
                 <string>{552,136}</string>
                 <key>textureRect</key>
-                <string>{{771,1103},{538,122}}</string>
+                <string>{{1,771},{538,122}}</string>
                 <key>textureRotated</key>
-                <true/>
+                <false/>
             </dict>
             <key>rs.png</key>
             <dict>
@@ -405,7 +405,7 @@
                 <key>spriteSourceSize</key>
                 <string>{128,128}</string>
                 <key>textureRect</key>
-                <string>{{771,441},{66,124}}</string>
+                <string>{{1037,769},{66,124}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -420,7 +420,7 @@
                 <key>spriteSourceSize</key>
                 <string>{128,128}</string>
                 <key>textureRect</key>
-                <string>{{1,1467},{122,122}}</string>
+                <string>{{541,771},{122,122}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -435,7 +435,7 @@
                 <key>spriteSourceSize</key>
                 <string>{128,128}</string>
                 <key>textureRect</key>
-                <string>{{1,1591},{122,122}}</string>
+                <string>{{665,771},{122,122}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -450,7 +450,7 @@
                 <key>spriteSourceSize</key>
                 <string>{128,128}</string>
                 <key>textureRect</key>
-                <string>{{125,1575},{122,122}}</string>
+                <string>{{789,771},{122,122}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -465,7 +465,7 @@
                 <key>spriteSourceSize</key>
                 <string>{128,128}</string>
                 <key>textureRect</key>
-                <string>{{249,1575},{122,122}}</string>
+                <string>{{913,771},{122,122}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -480,7 +480,7 @@
                 <key>spriteSourceSize</key>
                 <string>{128,128}</string>
                 <key>textureRect</key>
-                <string>{{373,1575},{122,122}}</string>
+                <string>{{1105,769},{122,122}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -495,7 +495,7 @@
                 <key>spriteSourceSize</key>
                 <string>{128,128}</string>
                 <key>textureRect</key>
-                <string>{{497,1575},{122,122}}</string>
+                <string>{{1229,769},{122,122}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -510,7 +510,7 @@
                 <key>spriteSourceSize</key>
                 <string>{128,128}</string>
                 <key>textureRect</key>
-                <string>{{847,131},{128,128}}</string>
+                <string>{{1799,441},{128,128}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -525,7 +525,7 @@
                 <key>spriteSourceSize</key>
                 <string>{128,128}</string>
                 <key>textureRect</key>
-                <string>{{621,1575},{122,122}}</string>
+                <string>{{1353,767},{122,122}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -540,7 +540,7 @@
                 <key>spriteSourceSize</key>
                 <string>{128,128}</string>
                 <key>textureRect</key>
-                <string>{{847,261},{128,128}}</string>
+                <string>{{1585,571},{128,128}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -555,7 +555,7 @@
                 <key>spriteSourceSize</key>
                 <string>{128,128}</string>
                 <key>textureRect</key>
-                <string>{{847,391},{128,128}}</string>
+                <string>{{1715,571},{128,128}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -570,9 +570,9 @@
                 <key>spriteSourceSize</key>
                 <string>{40,20}</string>
                 <key>textureRect</key>
-                <string>{{977,189},{40,20}}</string>
+                <string>{{1477,873},{40,20}}</string>
                 <key>textureRotated</key>
-                <true/>
+                <false/>
             </dict>
             <key>typeHighlight.png</key>
             <dict>
@@ -585,9 +585,24 @@
                 <key>spriteSourceSize</key>
                 <string>{64,64}</string>
                 <key>textureRect</key>
-                <string>{{929,875},{50,50}}</string>
+                <string>{{1873,383},{50,50}}</string>
                 <key>textureRotated</key>
                 <false/>
+            </dict>
+            <key>vamp.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{218,240}</string>
+                <key>spriteSourceSize</key>
+                <string>{240,240}</string>
+                <key>textureRect</key>
+                <string>{{1027,549},{218,240}}</string>
+                <key>textureRotated</key>
+                <true/>
             </dict>
             <key>wait.png</key>
             <dict>
@@ -600,7 +615,7 @@
                 <key>spriteSourceSize</key>
                 <string>{32,32}</string>
                 <key>textureRect</key>
-                <string>{{933,711},{32,32}}</string>
+                <string>{{1913,35},{32,32}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -615,7 +630,7 @@
                 <key>spriteSourceSize</key>
                 <string>{128,128}</string>
                 <key>textureRect</key>
-                <string>{{771,973},{128,128}}</string>
+                <string>{{1585,701},{128,128}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -630,7 +645,7 @@
                 <key>spriteSourceSize</key>
                 <string>{64,64}</string>
                 <key>textureRect</key>
-                <string>{{929,815},{58,58}}</string>
+                <string>{{1631,831},{58,58}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -646,9 +661,9 @@
             <key>realTextureFileName</key>
             <string>misc.png</string>
             <key>size</key>
-            <string>{1000,1714}</string>
+            <string>{1950,894}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:6ab1dae7d28f44af187e6332593bdd53:b000871cc494dd281d3cc30f0595ce5b:cab1e9b820256652e8f1a6751ae38988$</string>
+            <string>$TexturePacker:SmartUpdate:3692759b0ba6da5ac09456d15c9b1384:67cf2dbc49484019413846fbeb43f383:cab1e9b820256652e8f1a6751ae38988$</string>
             <key>textureFileName</key>
             <string>misc.png</string>
         </dict>
